step13/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    kubernetes.io/ingress.class : 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: server.sample.com
      http:
        paths:
          - path: /node
            pathType: Prefix 
            backend:
              service:
                name: node-service 
                port:
                  number: 9980 
          - path: /java
            pathType: Prefix
            backend:
              service:
                name: java-service 
                port:
                  number: 9990
         
    # - host: server.sample.com
    #   http:
    #     paths:
    #       - path: /java
    #         backend:
    #           service:
    #             name: java-service 
    #             port:
    #               number: 9990
